Documentation added for plugin

--- a/plugin.xml
+++ b/plugin.xml
@@ -4,10 +4,9 @@
   <title>Spring Session Grails Plugin</title>
   <description>Spring Session Grails Plugin provide support for SpringSession project available in Grails.
 </description>
-  <documentation>http://grails.org/plugin/spring-session</documentation>
+  <documentation>https://github.com/jeetmp3/spring-session</documentation>
   <type>SpringSessionGrailsPlugin</type>
   <resources>
     <resource>DefaultSessionConfig</resource>
-    <resource>demo.HomeController</resource>
   </resources>
 </plugin>
