--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,15 @@
-target/
+.DS_Store
 *.iml
-.project
-build/
-.classpath
+*.iws
+*.log
 *.rdb
-.idea/
-
+/.idea
+/.classpath
+/.project
+/.settings
+/build
+/grails-spring-session-*.zip
+/grails-spring-session-*.zip.sha1
+/plugin.xml
+/target
+/web-app
