--- a/build.gradle
+++ b/build.gradle
@@ -41,24 +41,16 @@ dependencies {
     compile "org.springframework.boot:spring-boot-starter-logging"
     compile "org.springframework.boot:spring-boot-autoconfigure"
     compile "org.grails:grails-core"
-    compile "org.springframework.boot:spring-boot-starter-actuator"
     compile "org.springframework.boot:spring-boot-starter-tomcat"
     compile "org.grails:grails-dependencies"
     compile "org.grails:grails-web-boot"
-    compile "org.grails.plugins:cache"
-    compile "org.grails.plugins:scaffolding"
     console "org.grails:grails-console"
     profile "org.grails.profiles:web-plugin:3.1.1"
-    provided "org.grails:grails-plugin-services"
-    provided "org.grails:grails-plugin-domain-class"
     testCompile "org.grails:grails-plugin-testing"
-    testCompile "org.grails.plugins:geb"
-    testRuntime "org.seleniumhq.selenium:selenium-htmlunit-driver:2.47.1"
-    testRuntime "net.sourceforge.htmlunit:htmlunit:2.18"
+
     compile('org.springframework.session:spring-session:1.0.2.RELEASE')
-    compile('org.springframework.boot:spring-boot-starter-redis')
-    compile("org.grails.plugins:release:3.1.1")
-    compile("org.grails.plugins:rest-client-builder:2.1.1")
+    compile('org.springframework.data:spring-data-redis:1.4.2.RELEASE')
+    compile('redis.clients:jedis:2.5.2')
 }
 
 task wrapper(type: Wrapper) {
@@ -77,4 +69,10 @@ grailsPublish {
     developers = [johndoe:"John Doe"]
     portalUser = ""
     portalPassword = ""    
+}
+
+test {
+    testLogging {
+        events 'started', 'passed'
+    }
 }
