--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
     }
 }
 
-version "2.0.0-SNAPSHOT"
+version "2.0.0-RC1"
 group "org.grails.plugins"
 
 apply plugin:"eclipse"
@@ -71,6 +71,18 @@ grailsPublish {
     developers = [jeetmp3:"Jitendra Singh"]
     portalUser = ""
     portalPassword = ""
+}
+
+bintray {
+    pkg {
+        name = "$project.name"
+        issueTrackerUrl = "https://github.com/jeetmp3/$project.name/issues"
+        vcsUrl = "https://github.com/jeetmp3/$project.name"
+        version {
+            attributes = ['grails-plugin': "$project.group:$project.name"]
+            name = project.version
+        }
+    }
 }
 
 test {
