--- a/application.properties
+++ b/application.properties
@@ -1,2 +1,6 @@
-app.grails.version=2.4.4
+#Grails Metadata file
+#Mon Mar 13 14:15:00 BRT 2017
+app.grails.version=2.2.4
 app.name=spring-session
+plugins.hibernate=2.2.4
+plugins.tomcat=2.2.4
