--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
     }
 }
 
-version "2.0.0-RC1"
+version "2.0.1-ub"
 group "org.grails.plugins"
 
 apply plugin:"eclipse"
@@ -19,6 +19,7 @@ apply plugin:"org.grails.grails-plugin-publish"
 repositories {
     mavenLocal()
     maven { url "https://repo.grails.org/grails/repo" }
+    maven { url "https://repo.grails.org/grails/core" }
 }
 
 dependencyManagement {
@@ -41,10 +42,11 @@ dependencies {
 
     testCompile "org.grails:grails-plugin-testing"
     testCompile "org.grails.plugins:geb"
+    testCompile "org.grails:grails-web-testing-support:1.1.2"
 
     testRuntime 'org.seleniumhq.selenium:selenium-chrome-driver:2.44.0'
 
-    compile "org.springframework.session:spring-session:1.2.2.RELEASE"
+    compile "org.springframework.session:spring-session:1.3.1.RELEASE"
     compile "org.springframework.data:spring-data-redis:1.7.4.RELEASE"
 
     compile "redis.clients:jedis:2.9.0"
